<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.depaul.csc472.yt_remotecontrol.configure">

    <TextView
        android:id="@+id/configureID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/configure_favorite_channels"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/channel_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_control"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/lableID"
        android:layout_marginLeft="-11dp"
        app:layout_constraintLeft_toLeftOf="@+id/lableID"
        app:layout_constraintVertical_bias="0.129"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button0"
        android:text="@string/b0"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/channel_control"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/labelEditID"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button1"
        android:text="@string/b1"
        android:layout_width="75dp"
        android:layout_height="44dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button0"
        app:layout_constraintLeft_toRightOf="@+id/button0"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/button2"
        android:text="@string/b2"
        android:layout_width="75dp"
        android:layout_height="44dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/labelEditID"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button3"
        android:layout_column="1"
        android:text="@string/b3"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/button0"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/button0"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button4"
        android:text="@string/b4"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/button1"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button5"
        android:text="@string/b5"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/button2"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button6"
        android:layout_column="1"
        android:text="@string/b6"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/button3"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button7"
        android:text="@string/b7"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginLeft="-96dp"
        app:layout_constraintLeft_toLeftOf="@+id/button4"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button8"
        android:text="@string/b8"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/button5"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button9"
        android:layout_column="1"
        android:text="@string/b9"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/button6"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonPlus"
        android:text="@string/bPlus"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/button7"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonMinus"
        android:text="@string/bMinus"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/button8"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonPlus"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/btnPositionID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_channel_button"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/configureID"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/lableID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/label"
        app:layout_constraintLeft_toLeftOf="@+id/btnPositionID"
        app:layout_constraintTop_toBottomOf="@+id/btnPositionID"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/labelEditID"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/lableID"
        app:layout_constraintLeft_toRightOf="@+id/lableID"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/channelNumID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/_0"
        app:layout_constraintBaseline_toBaselineOf="@+id/channel_control"
        app:layout_constraintLeft_toRightOf="@+id/channel_control"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/cancelBtnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/saveBtnID"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
        app:layout_constraintVertical_bias="0.578"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/saveBtnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="-8dp"
        android:text="@string/save"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancelBtnID"
        app:layout_constraintRight_toRightOf="@+id/buttonMinus"
        tools:ignore="RtlHardcoded" />

    <RadioGroup
        android:id="@+id/radioBtnPos"
        android:layout_width="297dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/labelEditID"
        app:layout_constraintLeft_toRightOf="@+id/btnPositionID"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configureID"
        tools:ignore="RtlHardcoded"
        tools:layout_editor_absoluteX="-27dp">

        <RadioButton
            android:id="@+id/leftID"
            android:layout_width="75dp"
            android:layout_height="36dp"
            android:layout_marginLeft="22dp"
            android:layout_weight="1"
            android:text="@string/left"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnPositionID"
            app:layout_constraintLeft_toRightOf="@+id/btnPositionID"
            tools:ignore="RtlHardcoded" />

        <RadioButton
            android:id="@+id/middleID"
            android:layout_width="75dp"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/middle"
            app:layout_constraintBaseline_toBaselineOf="@+id/leftID"
            app:layout_constraintLeft_toRightOf="@+id/leftID"
            app:layout_constraintRight_toLeftOf="@+id/rightID" />

        <RadioButton
            android:id="@+id/rightID"
            android:layout_width="75dp"
            android:layout_height="36dp"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:text="@string/right"
            app:layout_constraintBaseline_toBaselineOf="@+id/middleID"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="RtlHardcoded" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>
